--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
+  <h1>
+    <b>中国新进学社官网</b>
+    </h1>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
+  <hr>
+  <body>此网站还在建设中</body>
 </html>
