--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-  <h1>
+  <title>中国新进学社</title>
+<h1>
     <b>中国新进学社官网</b>
     </h1>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
