--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <title>中国新进学社</title>
 <h1>
     <b>中国新进学社官网</b>
+  <h3><a href="https://www.wenjuan.com/s/UZBZJvZLhH">*2021年新进学社新社员报名入口（点击进入）</a>
+    </h3>
     </h1>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
   <hr>
