--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
   <title>中国新进学社</title>
-<h1>
+<h4>
     <b>中国新进学社官网</b>
+  </h4>
   <h3><a href="https://www.wenjuan.com/s/UZBZJvZLhH">*2021年新进学社新社员报名入口（点击进入）</a>
     </h3>
-    </h1>
+  <hr>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
   <hr>
-  <body>此网站还在建设中</body>
+  <body>
+    <h2>此网站还在建设中</h2></body>
 </html>
