--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <b>中国新进学社官网</b>
   </h1>
   <h3><a href="https://www.wenjuan.com/s/UZBZJvZLhH">*2021年新进学社新社员报名入口（点击进入）</a>
-    </h3>
+  </h3>
+  <h4>
+    <a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity">新进学院</a> 
+      </h4>
   <hr>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
   <hr>
