--- a/xinjinuniversity.html
+++ b/xinjinuniversity.html
@@ -5,6 +5,9 @@
   </h1>
  <body>学习新思想，争做新青年
   </body>
+<h4>
+    <a href="https://xinjinorg.github.io/xinjinorg/">中国新进学社</a> 
+      </h4>
   <hr>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
   <hr>
