--- a/xinjinuniversity.html
+++ b/xinjinuniversity.html
@@ -13,12 +13,12 @@
   <hr>
   <body>
      <h4>
-       <a href="https://www.bilibili.com/video/BV1tE411q7VE">高中生物必修一（人教版）视频合集</a> 
-       <a href="https://www.bilibili.com/video/BV1RT4y177f6">高中化学必修一(新人教版)视频合集</a> 
-       <a href="https://www.bilibili.com/video/BV18E411q7SW">高中物理必修一（人教版）视频合集</a> 
-       <a href="https://www.bilibili.com/video/BV1sJ411F7WT">高中数学必修一（人教版）视频合集</a> 
-       <a href="https://www.bilibili.com/video/BV1Pq4y1J7z7">高中英语必修第一册（新人教版）视频合集</a> 
-       <a href="https://www.bilibili.com/video/BV1Y54y117E1">高中地理必修一(新人教版)视频合集</a>
+       <li><a href="https://www.bilibili.com/video/BV1tE411q7VE">高中生物必修一（人教版）视频合集</a></li>
+       <li><a href="https://www.bilibili.com/video/BV1RT4y177f6">高中化学必修一(新人教版)视频合集</a></li> 
+       <li><a href="https://www.bilibili.com/video/BV18E411q7SW">高中物理必修一（人教版）视频合集</a></li> 
+       <li><a href="https://www.bilibili.com/video/BV1sJ411F7WT">高中数学必修一（人教版）视频合集</a></li> 
+       <li><a href="https://www.bilibili.com/video/BV1Pq4y1J7z7">高中英语必修第一册（新人教版）视频合集</a></li> 
+       <li><a href="https://www.bilibili.com/video/BV1Y54y117E1">高中地理必修一(新人教版)视频合集</a></li>
       </h4>
     <h2>此网站还在建设中</h2></body>
 </html>
