--- a/xinjinuniversity.html
+++ b/xinjinuniversity.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <title>新进学院</title>
 <h1>
-    <b>中国新进学社官网/新进学院</b>
+    <b>中国新进学社/新进学院</b>
   </h1>
  <body>学习新思想，争做新青年
   </body>
