Update and rename xinjinuniversity.html to xinjinuniversity/xinjinuniversity.html

--- a/xinjinuniversity/xinjinuniversity.html
+++ b/xinjinuniversity/xinjinuniversity.html
@@ -11,7 +11,7 @@
   <hr>
   <body>
      <h3>
-       <li><a href="https://xinjinorg.github.io/xinjinorg/gaozhong">高中专区</a></li>
+       <li><a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity/gaozhong.html">高中专区</a></li>
       
       </h3>
     <h2>此网站还在建设中</h2></body>
