--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <h3><a href="https://www.wenjuan.com/s/UZBZJvZLhH">*2021年新进学社新社员报名入口（点击进入）</a>
   </h3>
   <h2>
-    <a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity">新进学院</a> 
+    <a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity/xinjinuniversity.html">新进学院</a> 
       </h2>
   <hr>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
