--- a/xinjinuniversity/gaozhong.html
+++ b/xinjinuniversity/gaozhong.html
@@ -4,7 +4,7 @@
   </h1>
  <body>学习新思想，争做新青年
   </body>
-    <h2><a href="https://xinjinorg.github.io/xinjinorg/">中国新进学社</a> </h2><h2><a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity/">新进学院</a> </h2>
+    <h2><a href="https://xinjinorg.github.io/xinjinorg/">中国新进学社</a> </h2><h2><a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity/xinjinuniversity.html">新进学院</a> </h2>
   <hr>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
   <hr>
