--- a/xinjinuniversity/xinjinuniversity.html
+++ b/xinjinuniversity/xinjinuniversity.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
   <title>新进学院</title>
 <h1>
-    <b>中国新进学社/新进学院</b>
+    <b><a href="https://xinjinorg.github.io/xinjinorg/">中国新进学社</a>/新进学院</b>
   </h1>
- <body>学习新思想，争做新青年
-  </body>
-    <h2><a href="https://xinjinorg.github.io/xinjinorg/">中国新进学社</a> </h2>
   <hr>
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
   <hr>
+ <body>学习新思想，争做新青年
+  </body>
   <body>
      <h2>
        <li><a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity/gaozhong">高中专区</a></li>
       </h2>
-    <h2>此网站还在建设中</h2></body>
+    <h2>此网站还在建设中</h2>
+	</body>
 </html>
