--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <marquee behavior=slide>欢迎来到中国新进学社官网</marquee>
   <hr>
   <h2>
-  <a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity/xinjinuniversity.html">新进学院</a> 
+	<li><a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity/xinjinuniversity.html">新进学院</a></li>
+	<li><a href="https://xinjinorg.github.io/xinjinorg/xjmedia/guancha">新进观察</a></li> 
     </h2>
   <h3><a href="https://www.wenjuan.com/s/UZBZJvZLhH">*2021年新进学社新社员报名入口（点击进入）</a>
 	</h3>
