--- a/index.html
+++ b/index.html
@@ -10,37 +10,33 @@
 <body>
 <div class="textstyle1">
   <img src="rc_images/____1200x675.png" id="img_54a1c552" alt="" title="" />
-  <div id="text_46617e6a">
-    <div class="textstyle1">
-      <span class="textstyle2">中国新进学社（XJO/CPO）</span>
-      </div>
-    </div>
-  <div id="menu_64f37254">
-    <div  class="menuholder1"><a href="javascript:void(0);">
+<div id="text_46617e6a"><div class="textstyle1">  <span class="textstyle2">&#20013;&#22269;&#26032;&#36827;&#23398;&#31038;&#9304;JO/CPO&#65289;</span>
+</div>
+</div><div id="menu_64f37254"><div  class="menuholder1"><a href="javascript:void(0);">
 	<div id="menuentry_7912be8c"  class="style1 menu_64f37254_mainMenuEntry mobileEntry">
 		<div class="style2">
-      <span class="textstyle3">≡</span>
+  <span class="textstyle3">&#8801;</span>
 		</div>
 	</div>
 </a>
 <a href="https://xinjinorg.github.io/xinjinorg/" style="text-decoration:none">
 	<div id="menuentry_3f14847d"  class="style3 menu_64f37254_mainMenuEntry normalEntry">
 		<div class="style4">
-      <span class="textstyle4">首页</span>
+  <span class="textstyle4">&#39318;&#39029;</span>
 		</div>
 	</div>
 </a>
 <a href="https://xinjinorg.github.io/xinjinorg/xinjinuniversity/xinjinuniversity.html" style="text-decoration:none">
 	<div id="menuentry_567eab73"  class="style5 menu_64f37254_mainMenuEntry normalEntry">
 		<div class="style4">
-      <span class="textstyle4">新进学院</span>
+  <span class="textstyle4">&#26032;&#36827;&#23398;&#38498;</span>
 		</div>
 	</div>
 </a>
 <a href="https://xinjinorg.github.io/xinjinorg/xjmedia/guancha" style="text-decoration:none">
 	<div id="menuentry_6b4db2e2"  class="style6 menu_64f37254_mainMenuEntry normalEntry">
 		<div class="style4">
-      <span class="textstyle4">新进观察</span>
+  <span class="textstyle4">&#26032;&#36827;&#35266;&#23519;</span>
 		</div>
 	</div>
 </a>
@@ -49,24 +45,17 @@
 	<script type="text/javascript">
 		var js_menu_64f37254= new wsp_menu('menu_64f37254', 'menu_64f37254', 10);
 
-		js_menu_64f37254.createMenuForItem('menuentry_7912be8c', ["      <span class=\"textstyle4\">首页</span> ", 'https://xinjinorg.github.io/xinjinorg/', '',
-		                                   "      <span class=\"textstyle4\">新进学院</span> ", 'https://xinjinorg.github.io/xinjinorg/xinjinuniversity/xinjinuniversity.html', '',
-		                                   "      <span class=\"textstyle4\">新进观察</span> ", 'https://xinjinorg.github.io/xinjinorg/xjmedia/guancha', '']);
+		js_menu_64f37254.createMenuForItem('menuentry_7912be8c', ["  <span class=\"textstyle4\">&#39318;&#39029;</span> ", 'https://xinjinorg.github.io/xinjinorg/', '',
+		                                   "  <span class=\"textstyle4\">&#26032;&#36827;&#23398;&#38498;</span> ", 'https://xinjinorg.github.io/xinjinorg/xinjinuniversity/xinjinuniversity.html', '',
+		                                   "  <span class=\"textstyle4\">&#26032;&#36827;&#35266;&#23519;</span> ", 'https://xinjinorg.github.io/xinjinorg/xjmedia/guancha', '']);
 		js_menu_64f37254.createMenuForItem('menuentry_3f14847d', []);
 		js_menu_64f37254.createMenuForItem('menuentry_567eab73', []);
 		js_menu_64f37254.createMenuForItem('menuentry_6b4db2e2', []);
 
 	</script>
-      </div>
-    </div>
-  <a href="http://https://www.wenjuan.com/s/UZBZJvZLhH" style="text-decoration:none"><div id="button_1fce3f8f">
-    <div class="vcenterstyle1"><div class="vcenterstyle2">      <div class="textstyle5">
-        <span class="textstyle6">*2021年新进学社新社员报名入口（点击进入）</span>
-        </div>
-      <div class="textstyle1">
-        </div>
-      </div></div>
-    </div></a>
-  </div>
+</div></div><a href="http://https://www.wenjuan.com/s/UZBZJvZLhH" style="text-decoration:none"><div id="button_1fce3f8f"><div class="vcenterstyle1"><div class="vcenterstyle2"><div class="textstyle5">  <span class="textstyle6">*2021&#24180;&#26032;&#36827;&#23398;&#31038;&#26032;&#31038;&#21592;&#25253;&#21517;&#20837;&#21475;&#46265;&#20987;&#36827;&#20837;&#65289;</span>
+</div>
+<div class="textstyle1"></div>
+</div></div></div></a>  </div>
 </body>
 </html>
