--- a/xinjinuniversity/gaozhong.html
+++ b/xinjinuniversity/gaozhong.html
@@ -9,13 +9,27 @@
   <body>学习新思想，争做新青年
    </body>
   <body>
-     <h4>
-       <li><a href="https://www.bilibili.com/video/BV1tE411q7VE">高中生物必修一（人教版）视频合集</a></li>
-       <li><a href="https://www.bilibili.com/video/BV1RT4y177f6">高中化学必修一(新人教版)视频合集</a></li> 
-       <li><a href="https://www.bilibili.com/video/BV18E411q7SW">高中物理必修一（人教版）视频合集</a></li> 
-       <li><a href="https://www.bilibili.com/video/BV1sJ411F7WT">高中数学必修一（人教版）视频合集</a></li> 
-       <li><a href="https://www.bilibili.com/video/BV1Pq4y1J7z7">高中英语必修第一册（新人教版）视频合集</a></li> 
-       <li><a href="https://www.bilibili.com/video/BV1Y54y117E1">高中地理必修一(新人教版)视频合集</a></li>
-      </h4>
+     <h3>国家中小学课程资源</h3>
+		<h4>
+			<li><a href="https://www.bilibili.com/video/BV11p4y1Y7dD">高一语文必修第一册 新人教版 2021新版 </a></li>
+			<li><a href="https://www.bilibili.com/video/BV1Qh41197th">高一数学必修第一册 新人教版 2021新版</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV1ch411R7A1">高一英语必修第一册 新人教版 2021新版</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV1g54y1v7TJ">高一物理必修第一册 新人教版 2021新版</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV1D54y127hn">高一化学必修第一册 新人教版 2021新版</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV1wZ4y1T7Uz">高一生物必修第一册 新人教版 2021新版</a></li>
+			<li><a href="https://www.bilibili.com/video/BV1i54y127Jh">高一政治必修第一册 新人教版 2021新版</a></li>
+			<li><a href="https://www.bilibili.com/video/BV1pf4y1X7xb">高一历史必修第一册 新人教版 2021新版</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV1nD4y1m7Bb">高一地理必修第一册 新人教版 2021新版</a></li>
+		</h4>
+		<hr>
+	<h3>锦城大同教育</h3>
+		<h4>
+			<li><a href="https://www.bilibili.com/video/BV1tE411q7VE">高中生物必修一（人教版）视频合集</a></li>
+			<li><a href="https://www.bilibili.com/video/BV1RT4y177f6">高中化学必修一(新人教版)视频合集</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV18E411q7SW">高中物理必修一（人教版）视频合集</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV1sJ411F7WT">高中数学必修一（人教版）视频合集</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV1Pq4y1J7z7">高中英语必修第一册（新人教版）视频合集</a></li> 
+			<li><a href="https://www.bilibili.com/video/BV1Y54y117E1">高中地理必修一(新人教版)视频合集</a></li>
+		</h4>
     <h2>此网站还在建设中</h2></body>
 </html>
