--- a/xjmedia/guancha.html
+++ b/xjmedia/guancha.html
@@ -13,7 +13,7 @@
 		<li><a href="https://xinjinorg.github.io/xinjinorg/weikaifang">学社新闻-新进传媒</a></li>
 		<li><a href="https://news.cctv.com/china/">国内新闻-央视网</a></li>
 		<li><a href="https://www.guancha.cn/internation?s=dhguoji">国际新闻-观察者网</a></li>
-		<li><a href="https://news.cctv.com/society">民生热点</a></li>
+		<li><a href="https://news.cctv.com/society">民生热点-央视网</a></li>
 		<li><a href="https://user.guancha.cn/?s=dhfengwen">社会风评-风闻社区</a></li>
 		</h2>
     <h2>此网站还在建设中</h2>
